update shift log and resolve conflict

--- a/src/app/modals/shift-log-add/shift-log-add.component.scss
+++ b/src/app/modals/shift-log-add/shift-log-add.component.scss
@@ -16,3 +16,7 @@
 .pointer-events-none {
     pointer-events: none;
 }
+
+:host ::ng-deep .tableFixHead {
+    height: auto !important;
+}
